# Project-Trmplate

./: Dockerfile  README.md  example.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crypto_predictor/: __init__.py  config.py  data_fetcher.py  indicators.py  models.py  predictor.py
tests/: test_crypto_predictor.py
