# This file defines the project's metadata, dependencies, and tool configurations.
# It uses Poetry for dependency management, which is robust for enterprise projects.

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "An enterprise-grade trading bot with RFA and an ML Prediction Engine."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "your_project_name", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
# Main application dependencies
flask = "^3.0.0"
gunicorn = "^23.0.0"

# ML Dependencies
torch = "^2.1.0"
numpy = "^2.3.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
redis = "^6.4.0"  # Replacement for archived aioredis; supports async operations

[tool.poetry.group.dev.dependencies]
# Dependencies for development and testing
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]